[project]
name = "unchaos"
version = "0.1.0"
description = "A terminal-based note-taking utility"
authors = [
    {name = "kulasinski",email = "kulasinski@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama (>=0.4.6,<0.5.0)"
]

[tool.poetry]
packages = [{include = "unchaos", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
unchaos = "unchaos.cli:main"
