[project]
name = "unchaos"
version = "0.1.0"
description = "A terminal-based note-taking utility"
authors = [
    {name = "kulasinski",email = "kulasinski@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama (>=0.4.6,<0.5.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "ollama (>=0.4.7,<0.5.0)",
    "prompt-toolkit (>=3.0.50,<4.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "tabulate (>=0.9.0,<0.10.0)"
]

[tool.poetry]
packages = [{include = "unchaos", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"  # ✅ Explicitly define Python version

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
unchaos = "unchaos.cli:cli"
